--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/basePage/BasePage.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/basePage/BasePage.html
@@ -25,22 +25,21 @@
 		<div wicket:id="containerMenu">
 			<div class="div_tam">
 				<ul id="menu" class="Menu">
-					<li id="nav-1" style="z-index: 1"><a style="cursor: default;" id="Menu1Link" class="menuRedendoLeft botoes" href="#">Cadastro
-					</a>
+					<li id="nav-1" style="z-index: 1"><a style="cursor: default;" id="Menu1Link" class="menuRedendoLeft botoes" href="#">Cadastro</a>
 						<ul id="subnav-1" class="ultimoLinkBottomLeft">
 							<li><a wicket:id="consultarProduto" href="#">Manter Produto</a></li>
 							<li><a wicket:id="consultarCliente" href="#">Manter Cliente</a></li>
 							<li><a wicket:id="consultarExercicio" href="#">Manter Atividade</a></li>
 						</ul></li>
 
-					<li id="nav-2" style="z-index: 1"><a style="cursor: default" id="Menu2Link" href="#">Vendas </a>
+					<li id="nav-2" style="z-index: 1"><a style="cursor: default" id="Menu2Link" href="#">Venda</a>
 						<ul id="subnav-3" class="ultimoLinkBottomLeft">
-							<li><a wicket:id="efetuarVenda" href="#">Efetuar Venda</a></li>
+							<li><a wicket:id="efetuarVenda" href="#">Registrar Venda</a></li>
 							<li><a wicket:id="relatorioVenda" href="#">Relatório de Venda</a></li>
 						</ul></li>
-					<li id="nav-3" style="z-index: 1"><a style="cursor: default" id="Menu2Link" class="menuRedendoRight" href="#">Mensalidade </a>
+					<li id="nav-3" style="z-index: 1"><a style="cursor: default" id="Menu2Link" class="menuRedendoRight" href="#">Mensalidade</a>
 						<ul id="subnav-3" class="ultimoLinkBottomright">
-							<li><a wicket:id="pagamentoMenslidade" href="#">Pagamento</a></li>
+							<li><a wicket:id="pagamentoMenslidade" href="#">Registrar Pagamento</a></li>
 							<li><a wicket:id="relatorioMensalidade" href="#">Relatório de Pagamento</a></li>
 						</ul></li>
 				</ul>
