--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mensalidade/pagamento/PagamentoIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mensalidade/pagamento/PagamentoIndex.html
@@ -2,7 +2,7 @@
 	<form wicket:id="formulario">
 		<div class="div_center">
 			<fieldset class="fieldset">
-				<legend class="legenda" style="margin-left: 15px" align="left">Pagamento</legend>
+				<legend class="legenda" style="margin-left: 15px" align="left">Pagamento de Mensalidade</legend>
 				<div wicket:id="containerGridDados">
 					<fieldset>
 						<legend class="legenda" align="left">Dados do Cliente</legend>
