--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/produto/cadastrar/CadastrarAlterarProdutoIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/produto/cadastrar/CadastrarAlterarProdutoIndex.html
@@ -3,7 +3,7 @@
 		<div class="div_center">
 			<div>
 				<fieldset>
-					<legend class="legenda" align="left">Cadastrar/Alterar Produto</legend>
+					<legend class="legenda" align="left"><label wicket:id="lbnCadALt"></label></legend>
 					<div class="dataTables_wrapper" style="left: 35px; width: 500px;">
 						<div class="LabelInputNome grid_6">
 							<label> Nome Produto:</label>
@@ -16,7 +16,7 @@
 					</div>
 				</fieldset>
 				<div class="clear"></div>
-				<div class="grid_6" style="margin-left: 30px;">
+				<div class="grid_4" style="margin-left: 25px;">
 					<input wicket:id="btnNovoProduto" class="botao" type="submit" name="avancar" value="Salvar" />
 					<input wicket:id="btnVoltar" class="botao" type="submit" name=Limpar value="Voltar" />
 				</div>
