--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/venda/efetuarVenda/EfetuarVendaIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/venda/efetuarVenda/EfetuarVendaIndex.html
@@ -3,7 +3,7 @@
 		<div wicket:id="modal"></div>
 		<div class="div_center">
 			<fieldset class="fieldset">
-				<legend class="legenda" style="margin-left: 15px" align="left">Efetuar Venda</legend>
+				<legend class="legenda" style="margin-left: 15px" align="left">Registrar Venda</legend>
 				<fieldset>
 					<legend class="legenda" align="left">Produtos</legend>
 					<div class="LabelInputNome grid_4">
@@ -41,7 +41,7 @@
 				</fieldset>
 			</fieldset>
 			<div class="clear"></div>
-			<div class="grid_6" style="margin-left: 30px;">
+			<div class="grid_4" style="margin-left: 30px;">
 				<input wicket:id="btnFecharVenda" class="botao" type="submit" name="avancar" value="Fechar Compra" />
 				<input wicket:id="btnVoltar" class="botao" type="submit" name="Voltar" value="Voltar" />
 			</div>
