--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/MobileHomeIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/MobileHomeIndex.html
@@ -31,7 +31,7 @@
 		</div>
 		<div wicket:id="containerLateral">
 			<div data-role="panel" id="right-panel" data-display="overlay" data-position="right">
-				<ul data-role="listview" data-icon="false">
+				<ul data-role="listview" data-icon="false" data-filter="true" data-inset="true">
 					<li data-icon="delete">
 						<a href="#" data-rel="close">Fechar</a>
 					</li>
