Atualizado erro do upload de fotos sem anexar uma foto !

--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/exercicio/cadastrar/CadastrarAlterarExercicioIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/exercicio/cadastrar/CadastrarAlterarExercicioIndex.html
@@ -87,7 +87,7 @@
 						</div>
 					</fieldset>
 				</div>
-				<div class="radioEquipamento grid_9" style="float: left">
+				<div class="radioEquipamento grid_9" style="float: left; margin-bottom: 10px">
 					<span wicket:id="radioEquipamento">
 						<input wicket:id="alterarEquipamento" type="radio" id="radio1" name="radioEquipamento">
 						<label for="radio1">Alterar</label>
