--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/ExecutaExercicio/MobileExecutarExercicioIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/ExecutaExercicio/MobileExecutarExercicioIndex.html
@@ -2,7 +2,7 @@
 	<form wicket:id="formulario">
 		<div data-role="header" style="margin-bottom: 5px" data-position="fixed">
 			<a href="" wicket:id="btnVoltar" class="ui-btn ui-icon-back ui-btn-icon-left ui-shadow ui-corner-all ui-btn-inline ui-mini botaoMenu"></a>
-			<h1><label wicket:id="lbnDataSelecionada"></label></h1>
+			<h1><label wicket:id="lbnDataSelecionada"  style="font-weight: bold;"></label></h1>
 		</div>
 		<div style="margin: auto;">
 		<div class="clear"></div>
@@ -50,7 +50,7 @@
 								<label wicket:id="lbnData"></label>
 							</h2>
 						</li>
-						<li style="border-bottom-width: 20px; border-bottom-color: black; border-left-width: 0px; border-right-width: 0px;">
+						<li style="border-bottom-width: 20px; border-bottom-color: rgb(231, 231, 231); border-left-width: 0px; border-right-width: 0px;">
 							<div>
 								Repetições:
 								<span class="ui-li-count ui-body-inherit" style="position: static; float: right;" wicket:id="lbnRepeticoes"></span>
