--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/MobileDetalharExercicio/MobileDetalharExercicioIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/MobileDetalharExercicio/MobileDetalharExercicioIndex.html
@@ -10,7 +10,7 @@
 				></a>
 			</div>
 			<h1>
-				<label wicket:id="lbnDataSelecionada"></label>
+				<label wicket:id="lbnDataSelecionada" style="font-weight: bold;"></label>
 			</h1>
 
 		</div>
@@ -20,7 +20,7 @@
 		<div class="margensModalBranca">
 			<div class="ui-body ui-body-a ui-corner-all">
 				<div class="ui-content">
-					<label wicket:id="lbnNomeExercicio" for="name"></label>
+					<label wicket:id="lbnNomeExercicio" style="font-weight: bold;" for="name"></label>
 				</div>
 				<div class="ui-content backGroundExecutar" style="padding-left: 0px; padding-right: 0px;">
 					<ul class="bxslider">
