--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/TipoExercicio/MobileTipoExercicoIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/TipoExercicio/MobileTipoExercicoIndex.html
@@ -2,7 +2,7 @@
 	<form wicket:id="formulario">
 		<div data-role="header" style="margin-bottom: 5px" data-position="fixed">
 			<a href="" wicket:id="btnVoltar" class="ui-btn ui-icon-back ui-btn-icon-left ui-shadow ui-corner-all ui-btn-inline ui-mini botaoMenu"></a>
-			<h1><label wicket:id="lbnDataSelecionada"></label></h1>
+			<h1><label wicket:id="lbnDataSelecionada" style="font-weight: bold;"></label></h1>
 		</div>
 		<div class="clear"></div>
 		<div class="margensModalBranca">
