Atualizado Erro UJploads

--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/venda/fecharVenda/FechaVendaIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/venda/fecharVenda/FechaVendaIndex.html
@@ -59,7 +59,7 @@
 					</fieldset>
 				</div>
 				<fieldset>
-					<legend class="legenda" align="left">Lista de Compras</legend>
+					<legend class="legenda" align="left">Lista de Itens</legend>
 					<div class="dataTables_wrapper">
 						<table class="display  dataTable" style="width: 100%; border: 1px;" wicket:id="tableProdutoVenda"></table>
 					</div>
@@ -71,7 +71,7 @@
 						<span class="obrigatorio">*</span>
 						Data da Compra:
 					</label>
-					<input wicket:id="campoDataVenda" type="text" maxlength="11" class="campoText" />
+					<input wicket:id="campoDataVenda"  type="text" maxlength="11" class="campoText" />
 				</div>
 				<div style="float: right;">
 					<div class="LabelInputNome grid_1_2" style="margin-right: 0px;">
