--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/componentes/gridGenerica/CustomNavigator.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/componentes/gridGenerica/CustomNavigator.html
@@ -3,7 +3,7 @@
 		<td wicket:id="span">
 			<div style="float: left">
 				<div class="dataTables_paginate paging_simple_numbers">
-					Items por pagina: 
+					Itens por pagina: 
 					<span wicket:id="itemsPerPage" class="paginate_button"> 
 						<span class="redendo"> 
 							<a wicket:id="itemPerPageLink"> 
