--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/cliente/consultar/ConsultarClienteIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/cliente/consultar/ConsultarClienteIndex.html
@@ -7,7 +7,7 @@
 					<legend class="legenda" align="left">Consultar Cliente</legend>
 					<div class="dataTables_wrapper" style="left: 35px; width: 500px;">
 						<div class="LabelInputNome grid_3">
-							<label> Codigo:</label>
+							<label> Código:</label>
 							<input wicket:id="codigo" type="text" maxlength="100" class="numero campoText" />
 						</div>
 						<div class="LabelInputNome grid_6">
@@ -34,7 +34,7 @@
 				</fieldset>
 				<div class="clear"></div>
 				<div class="grid_6" style="margin-left: 30px;">
-					<input wicket:id="btnNovoCliente" class="botao" type="submit" name="avancar" value="Cadastrar Novo Usuario" />
+					<input wicket:id="btnNovoCliente" class="botao" type="submit" name="avancar" value="Cadastrar Novo Usuário" />
 					<input wicket:id="btnVoltar" class="botao" type="submit" name=Limpar value="Voltar" />
 				</div>
 			</div>
