--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/exercicio/consultar/ConsultarExercicioIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/exercicio/consultar/ConsultarExercicioIndex.html
@@ -6,7 +6,7 @@
 				<legend class="legenda" align="left">Consultar Atividade:</legend>
 				<div class="dataTables_wrapper" style="left: 35px; width: 500px;">
 					<div class="LabelInputNome grid_3">
-						<label> Codigo:</label>
+						<label> Código:</label>
 						<input wicket:id="codigo" type="text" maxlength="100" class="numero campoText" />
 					</div>
 					<div class="LabelInputNome grid_6">
