--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/exercicio/cadastrar/CadastrarAlterarExercicioIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/exercicio/cadastrar/CadastrarAlterarExercicioIndex.html
@@ -15,7 +15,7 @@
 					<div class="LabelInputNome grid_4">
 						<label>
 							<span class="obrigatorio">*</span>
-							Descricao do Atividade:
+							Descrição da Atividade:
 						</label>
 						<textarea wicket:id="descricaoExercicio" class="campoText" rows="12" style="height: 256px; max-width: 220px;" cols="40"></textarea>
 					</div>
