Atualizado tamanha de descri criacao de atividade

--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/exercicio/cadastrar/CadastrarAlterarExercicioIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/exercicio/cadastrar/CadastrarAlterarExercicioIndex.html
@@ -17,7 +17,7 @@
 							<span class="obrigatorio">*</span>
 							Descrição da Atividade:
 						</label>
-						<textarea wicket:id="descricaoExercicio" class="campoText" rows="12" style="height: 256px; max-width: 220px;" cols="40"></textarea>
+						<textarea wicket:id="descricaoExercicio"  maxlength="100" class="campoText" rows="12" style="height: 256px; max-width: 220px;" cols="40"></textarea>
 					</div>
 				</div>
 				<div class="LabelInputNome grid_5">
@@ -41,7 +41,7 @@
 							</div>
 							<div class="LabelInputNome grid_4">
 								<label> Descrição:</label>
-								<textarea wicket:id="descricaoTipoEquip" class="campoText" style="max-width: 211px;" rows="6" cols="80"></textarea>
+								<textarea wicket:id="descricaoTipoEquip" class="campoText" maxlength="100" style="max-width: 211px;" rows="6" cols="80"></textarea>
 							</div>
 							<div class="grid_4" style="margin-left: 0px">
 								<div class="grid_3" style="margin-left: 0px">
@@ -74,7 +74,7 @@
 							</div>
 							<div class="LabelInputNome grid_4">
 								<label> Descrição:</label>
-								<textarea wicket:id="descricaoMembroCorpo" class="campoText" style="max-width: 211px;" rows="6" cols="80"></textarea>
+								<textarea wicket:id="descricaoMembroCorpo" class="campoText" maxlength="100" style="max-width: 211px;" rows="6" cols="80"></textarea>
 							</div>
 							<div class="grid_4" style="margin-left: 0px">
 								<div class="grid_3" style="margin-left: 0px">
