Atualizado lista all pessoas ordenada !  e acendo no numero

--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/ExecutaExercicio/MobileExecutarExercicioIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/ExecutaExercicio/MobileExecutarExercicioIndex.html
@@ -28,7 +28,7 @@
 					</div>
 				</div>
 				<div class="ui-content">
-					<label for="basic"> Numero Series </label>
+					<label for="basic"> Número Series </label>
 					<div class="grid_2">
 						<input type="text" name="numeroSeries" class="numero" wicket:id="numeroSeries">
 					</div>
