--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/exercicio/consultar/ConsultarExercicioIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/exercicio/consultar/ConsultarExercicioIndex.html
@@ -24,7 +24,7 @@
 						</select>
 					</div>
 				</div>
-				<div class="dataTables_wrapper" style="left: 35px; width: 100px; float: left; margin-top: 10px; margin-bottom: 15px;">
+				<div class="grid_3" style="margin-bottom: 10px;">
 					<input wicket:id="btnPesquisar" class="botao" type="submit" name="Pesquisar" value="Pesquisar" />
 				</div>
 				<div class="dataTables_wrapper">
